--- a/index.html
+++ b/index.html
@@ -216,6 +216,7 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+			<script src="assets/js/script.js"></script>
 
 	</body>
 </html>
