--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 					<div class="content">
 						<header>
 							<h2>Let's hear images.</h2>
-							<p>Have you ever wondered what images sound like?<br />
+							<p>Have you ever wondered what art sounds like?<br />
 							Now you can find out with AI.</p>
 						</header>
 						<span class="image"><img src="images/pic01.jpg" alt="" /></span>
