--- a/index.html
+++ b/index.html
@@ -88,7 +88,10 @@
 					</div>
 					<a href="#two" class="goto-next scrolly">Next</a>
 				</section>
-
+				<input type="color"  class="js-color-picker  color-picker">
+				<input type="range" class="js-line-range" min="1" max="72" value="1">
+				<label class="js-range-value">1</label>Px
+				<canvas class="js-paint  paint-canvas" width="600" height="300"></canvas>
 			<!-- Two -->
 				<section id="two" class="spotlight style2 right">
 					<!-- <span class="image fit main"><img src="images/pic03.jpg" alt="" /></span>  -->
