--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 				<canvas class="js-paint  paint-canvas" width="600" height="300"></canvas>
 			<!-- Two -->
 				<section id="two" class="spotlight style2 right">
-				<span>
+				<span class="image fit main">
 					<!-- <span class="image fit main"><img src="images/pic03.jpg" alt="" /></span>  -->
 					<input type="color"  class="js-color-picker  color-picker">
 					<input type="range" class="js-line-range" min="1" max="72" value="1">
