adding in image again

--- a/index.html
+++ b/index.html
@@ -94,11 +94,12 @@
 				<canvas class="js-paint  paint-canvas" width="600" height="300"></canvas>
 			<!-- Two -->
 				<section id="two" class="spotlight style2 right">
-				<span class="image fit main">
-					<!-- <span class="image fit main"><img src="images/pic03.jpg" alt="" /></span>  -->
+				
+					<span class="image fit main"><img src="images/pic03.jpg" alt="" /></span>
+				<div>
 					<label class="js-range-value">1</label>Px
 					<canvas class="js-paint  paint-canvas" width="600" height="300"></canvas>
-				</span>
+				</div>
 					<div class="content">
 						<header>
 							<h2>Draw your own image here.</h2>
