adding input stuff

--- a/index.html
+++ b/index.html
@@ -97,6 +97,8 @@
 				
 					<span class="image fit main"><img src="images/pic03.jpg" alt="" /></span>
 				<div>
+					<input type="color"  class="js-color-picker  color-picker">
+					<input type="range" class="js-line-range" min="1" max="72" value="1">
 					<label class="js-range-value">1</label>Px
 					<canvas class="js-paint  paint-canvas" width="600" height="300"></canvas>
 				</div>
