--- a/index.html
+++ b/index.html
@@ -138,12 +138,12 @@
 						<div class="box alt">
 							<div class="row gtr-uniform">
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<span class="icon solid alt major fa-comment"></span>
+									<span class="icon brands alt major fa-instagram"></span>
 									<h3>Instagram</h3>
 									<p>Share your image and generated music to Instagram.</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<span class="icon brands alt fa-facebook-f"></span>
+									<span class="icon brands alt major fa-facebook-f"></span>
 									<h3>Facebook</h3>
 									<p>Share your image and generated music to Facebook</p>
 								</section>
