--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon brands alt major fa-instagram"></span>
 									<h3>Instagram</h3>
-									<p>Share your image and generated music to Instagram.</p>
+									<p>Share your image and generated music to Instagram</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon brands alt major fa-facebook-f"></span>
