adding fild upload

--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
 									</header>
 								</div>
 								<div class="col-4 col-12-medium">
-									<p>Feugiat accumsan lorem eu ac lorem amet sed accumsan donec.
-									Blandit orci porttitor semper. Arcu phasellus tortor enim mi
-									nisi praesent dolor adipiscing. Integer mi sed nascetur cep aliquet
-									augue varius tempus lobortis porttitor accumsan consequat
-									adipiscing lorem dolor.</p>
+									<p>You can upload your own drawing.</p>
+								</div>
+								<div>
+									<input type='file' onchange="readURL(this);" />
+									<img id="blah" src="http://placehold.it/180" alt="your image" />	
 								</div>
 								<div class="col-4 col-12-medium">
 									<p>Morbi enim nascetur et placerat lorem sed iaculis neque ante
@@ -220,6 +220,6 @@
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
 			<script src="assets/js/script.js"></script>
-
+			<script src="assets/js/imageupload.js"></script>
 	</body>
 </html>
