--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 								</div>
 								<div>
 									<input type='file' onchange="readURL(this);" />
-									<img id="blah" src="http://placehold.it/180" alt="your image" />	
+									<img style="max-width:180px;" id="blah" src="http://placehold.it/180" alt="your image" />	
 								</div>
 								<div class="col-4 col-12-medium">
 									<p>Morbi enim nascetur et placerat lorem sed iaculis neque ante
