--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
 									<p>You can upload your own drawing.</p>
 								</div>
 								<div>
-									<input type='file' onchange="readURL(this);" />
-									<img style="max-width:180px;" id="blah" src="http://placehold.it/180" alt="your image" />	
+									<input type='file' onchange="readURL(this);" accept="image/jpeg, image/png"/>
+									<img style="max-width:180px;" id="blah" src="http://placehold.it/180" alt="your image"/>	
 								</div>
 								<div class="col-4 col-12-medium">
 									<p>Morbi enim nascetur et placerat lorem sed iaculis neque ante
