fixing styles and display for image upload section

--- a/index.html
+++ b/index.html
@@ -70,18 +70,15 @@
 									</header>
 								</div>
 								<div class="col-4 col-12-medium">
-									<p>You can upload your own drawing.</p>
-								</div>
-								<div>
-									<input type='file' onchange="readURL(this);" accept="image/jpeg, image/png"/>
-									<img style="max-width:180px;" id="blah" src="http://placehold.it/180" alt="your image"/>	
+									<p style="text-align:center;">You can upload your own drawings that are .jpg or .png files.</p>
+									<img style="max-width:320px;max-height:320px;display: block;margin-left: auto;margin-right: auto;" id="blah" src="http://placehold.it/320" alt="your image"/>
+									<br>
+									<input style= "display: block;margin-left: auto;margin-right: auto;" type='file' onchange="readURL(this);" accept="image/jpeg, image/png" />
 								</div>
 								<div class="col-4 col-12-medium">
-									<p>Morbi enim nascetur et placerat lorem sed iaculis neque ante
-									adipiscing adipiscing metus massa. Blandit orci porttitor semper.
-									Arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer
-									mi sed nascetur cep aliquet augue varius tempus. Feugiat lorem
-									ipsum dolor nullam.</p>
+									<header>
+										<h3 style="text-align:center;">Or you can draw a fresh image below right now!</h3>
+									</header>
 								</div>
 							</div>
 						</div>
