--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Landed by HTML5 UP</title>
+		<title>Listen to Art</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -17,7 +17,7 @@
 
 			<!-- Header -->
 				<header id="header">
-					<h1 id="logo"><a href="index.html">Landed111</a></h1>
+					<h1 id="logo"><a href="index.html">Listen to Art</a></h1>
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">Home</a></li>
@@ -77,13 +77,18 @@
 								</div>
 								<div class="col-4 col-12-medium">
 									<header>
+										<br>
+										<br>
+										<br>
 										<h3 style="text-align:center;">Or you can draw a fresh image below right now!</h3>
+										<br>
+										<a href="#two" class="button primary fit scrolly">Take me to my canvas!</a>
 									</header>
 								</div>
 							</div>
 						</div>
 					</div>
-					<a href="#two" class="goto-next scrolly">Next</a>
+				<!--	<a href="#two" class="goto-next scrolly">Next</a>       no scroll arrow anymore -->
 				</section>
 				<input type="color"  class="js-color-picker  color-picker">
 				<input type="range" class="js-line-range" min="1" max="72" value="1">
