--- a/index.html
+++ b/index.html
@@ -149,9 +149,9 @@
 									<p>Share your image and generated music to Facebook</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<span class="icon solid alt major fa-flask"></span>
-									<h3>Cubilia cep lobortis</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<span class="icon brands alt major fa-soundcloud"></span>
+									<h3>SoundCloud</h3>
+									<p>Share your generated music to SoundCloud</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major fa-paper-plane"></span>
