--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
 									<h3>SoundCloud</h3>
 									<p>Share your generated music to SoundCloud</p>
 								</section>
+								<!--      Second line of logos not filled yet
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major fa-paper-plane"></span>
 									<h3>Non semper interdum</h3>
@@ -168,6 +169,7 @@
 									<h3>Massa arcu accumsan</h3>
 									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
 								</section>
+							-->
 							</div>
 						</div>
 						<footer class="major">
