fix email button display stuff

--- a/index.html
+++ b/index.html
@@ -184,13 +184,13 @@
 				<section id="five" class="wrapper style2 special fade">
 					<div class="container">
 						<header>
-							<h2>Magna faucibus lorem diam</h2>
-							<p>Ante metus praesent faucibus ante integer id accumsan eleifend</p>
+							<h2>Sign up for a new playlist of AI-generated music every week</h2>
+							<p>Your playlist rotations are about to get a little bit more interesting.</p>
 						</header>
 						<form method="post" action="#" class="cta">
 							<div class="row gtr-uniform gtr-50">
 								<div class="col-8 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Your Email Address" /></div>
-								<div class="col-4 col-12-xsmall"><input type="submit" value="Get Started" class="fit primary" /></div>
+								<div class="col-4 col-12-small"><input type="submit" value="send me tunes" class="fit primary" /></div>
 							</div>
 						</form>
 					</div>
