--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 					<label class="js-range-value">1</label>
 					<canvas style="z-index: 100; display: block;margin-left: auto;margin-right: auto;" class="js-paint  paint-canvas" width="900" height="500"></canvas>
 					</div>
-					<div style="text-align: center;">
+					<div style="text-align: center;" class="content">
 						<p>When you are done with your masterpiece you can hit the button below to submit your image.</p>
 						<a style="width: 20%;" href="#three" class="button primary fit scrolly">Submit My Image for Analysis.</a>
 						<p></p>
