--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
 				<!-- Two -->
 				<section id="two" >
-					<div style="text-align: center;" class="content right">
+					<div style="text-align: center;" class="content">
 						<header>
 							<br>
 							<h2>Draw your own image here.</h2>
@@ -104,7 +104,7 @@
 					<input type="color"  class="js-color-picker  color-picker">
 					<input type="range" class="js-line-range" min="1" max="72" value="1">
 					<label class="js-range-value">1</label>
-					<canvas style="z-index: 100; display: block;margin-left: auto;margin-right: auto;" class="js-paint  paint-canvas" width="900" height="500"></canvas>
+					<canvas style="z-index: 100; display:block; margin-left: auto;margin-right: auto; width:100%; height: 100%;" class="js-paint  paint-canvas fit"></canvas>
 					</div>
 					<div style="text-align: center;" class="content">
 						<p>When you are done with your masterpiece you can hit the button below to submit your image.</p>
