messing with canvas

--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
 					<input type="color"  class="js-color-picker  color-picker">
 					<input type="range" class="js-line-range" min="1" max="72" value="1">
 					<label class="js-range-value">1</label>
-					<canvas style="z-index: 100; display:block; margin-left: auto;margin-right: auto;" class="js-paint  paint-canvas"></canvas>
-					<!-- <canvas style="z-index: 100; display:block; margin-left: auto;margin-right: auto;" class="js-paint  paint-canvas" width="900" height="500"></canvas> -->
+					<!-- <canvas style="z-index: 100; display:block; margin-left: auto;margin-right: auto;" class="js-paint  paint-canvas"></canvas> -->
+					<canvas style="z-index: 100; display:block; margin-left: auto;margin-right: auto;" class="js-paint  paint-canvas" width="900" height="500"></canvas> 
 					</div>
 					<div style="text-align: center;" class="content">
 						<p>When you are done with your masterpiece you can hit the button below to submit your image.</p>
