--- a/index.html
+++ b/index.html
@@ -113,6 +113,9 @@
 						<a style="width: 20%;" href="#three" class="button primary fit scrolly">Submit My Image for Analysis.</a>
 						<p></p>
 					</div>
+					<div class="col-4 col-12-medium">
+						<a style="width: 80%;display: block;margin-left: auto;margin-right: auto;text-align: center;" href="#three" class="button primary fit scrolly">Submit My Image for Analysis.</a>
+					</div>
 				</section>
 
 			<!-- Three -->
