button sizing fixed!

--- a/index.html
+++ b/index.html
@@ -110,11 +110,8 @@
 					</div>
 					<div style="text-align: center;" class="content">
 						<p>When you are done with your masterpiece you can hit the button below to submit your image.</p>
-						<a style="width: 20%;" href="#three" class="button primary fit scrolly">Submit My Image for Analysis.</a>
+						<a href="#three" class="button primary scrolly">Submit My Image for Analysis.</a>
 						<p></p>
-					</div>
-					<div class="col-4 col-12-medium">
-						<a style="width: 80%;display: block;margin-left: auto;margin-right: auto;text-align: center;" href="#three" class="button primary fit scrolly">Submit My Image for Analysis.</a>
 					</div>
 				</section>
 
